--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,104 +23,44 @@ jobs:
       versionCode: ${{ steps.version.outputs.versionCode }}
       minor-version: ${{ steps.version.outputs.minor-version }}
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 
+      - name: Get the current MINOR version using GitHub CLI
+        id: get-minor-version
+        run: |
+          MINOR=$(gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/MINOR \
+            --jq '.value')
+          echo "Current MINOR version: $MINOR"
+          echo "MINOR=$MINOR" >> $GITHUB_ENV
 
-      - name: Show version.txt content
-        run: cat version.txt
+      - name: Increment the MINOR version
+        id: increment-minor
+        run: |
+          NEW_MINOR=$((MINOR + 1))
+          echo "New MINOR version: $NEW_MINOR"
+          echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
 
-      - name: Read Version
+      - name: Update the MINOR version using GitHub CLI
+        run: |
+          gh api \
+            --method PATCH \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/MINOR \
+            -f "name=MINOR" -f "value=$NEW_MINOR"
+
+      - name: Set outputs for the new version
         id: version
         run: |
-          awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
-          MAJOR=$(awk -F'.' '{print $1}' version.txt)
-          MINOR=$(awk -F'.' '{print $2}' version.txt)
-          PATCH=$(awk -F'.' '{print $3}' version.txt)
-          VERSION_CODE=$MAJOR
-
-          # Set outputs using $GITHUB_OUTPUT
-          echo "new-version=$MAJOR.$MINOR.$PATCH" >> $GITHUB_OUTPUT
+          MAJOR=1 # Assuming a fixed value for MAJOR version
+          NEW_VERSION="$MAJOR.$NEW_MINOR.0"
+          VERSION_CODE="$MAJOR"
+          echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$VERSION_CODE" >> $GITHUB_OUTPUT
-          echo "minor-version=$MINOR" >> $GITHUB_OUTPUT
-
-          # Export variables to $GITHUB_ENV for use in later steps
-          echo "MAJOR=$MAJOR" >> $GITHUB_ENV
-          echo "MINOR=$MINOR" >> $GITHUB_ENV
-          echo "PATCH=$PATCH" >> $GITHUB_ENV
-
-          echo "Current version: $MAJOR.$MINOR.$PATCH"
-          echo "Version Code: $VERSION_CODE"
-
-      - name: Configure Git
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-
-      - name: Create and switch to new branch
-        run: |
-          BRANCH_NAME="version-update/${{ env.MAJOR }}-${{ env.MINOR }}-${{ env.PATCH }}-$(date +%s)"
-          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
-          git checkout -b "$BRANCH_NAME"
-               
-      - name: Commit changes
-        run: |
-          git add version.txt
-          git commit -m "Update version to ${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }}"
-
-      - name: Push new branch to repository
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ env.BRANCH_NAME }}
-          force: true 
-      
-      - name: Update git remote references
-        run: git remote update
-
-      - name: create pull request
-        run: gh pr create -B main -H ${{ env.BRANCH_NAME }} --title 'Merge ${{ env.BRANCH_NAME }} into main' --body 'Created by Github action'
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Auto-merge pull request
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-            const branchName = '${{ env.BRANCH_NAME }}';
-
-            const { data: pullRequests } = await github.rest.pulls.list({
-              owner: owner,
-              repo: repo,
-              state: 'open',
-              head: `${owner}:${branchName}`,
-            });
-
-            if (pullRequests.length > 0) {
-              const prNumber = pullRequests[0].number;
-
-              await github.rest.pulls.merge({
-                owner: owner,
-                repo: repo,
-                pull_number: prNumber,
-                merge_method: 'squash',
-              });
-
-              console.log(`Pull request #${prNumber} has been merged.`);
-            } else {
-              console.log(`No pull request found for branch ${branchName}`);
-            }
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Delete remote branch after merge
-        run: gh api -X DELETE "repos/${{ github.repository }}/git/refs/heads/${{ env.BRANCH_NAME }}"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-          
+          echo "minor-version=$NEW_MINOR" >> $GITHUB_OUTPUT
+             
+        
   build:
     runs-on: [self-hosted, Windows]
     needs: prepare-version
@@ -161,7 +101,7 @@ jobs:
       - name: Create or Update Release
         uses: softprops/action-gh-release@v1
         with:
-          files: output/*.apk,output/*.msix,KoOrderRegister\Technical\kor.pfx
+          files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
           tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}
           release_name: ${{ needs.prepare-version.outputs.new-version }}
           body_path: Technical/release_base.md
