--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,6 +2,7 @@ name: Publish
 
 env:
   branch-name: 'main'
+  varrible: 'STABIL_VERSION'
 
 on:
   pull_request:
@@ -23,16 +24,19 @@ jobs:
       versionCode: ${{ steps.version.outputs.versionCode }}
       minor-version: ${{ steps.version.outputs.minor-version }}
     steps:
-      - name: Get the current MINOR version using GitHub CLI
-        id: get-minor-version
+      - name: Get the current version using GitHub CLI
+        id: get-version
         run: |
-          MINOR=$(gh api \
+          VERSION=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/MINOR \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
             --jq '.value')
-          echo "Current MINOR version: $MINOR"
+          echo "Current version: $VERSION"
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          echo "MAJOR=$MAJOR" >> $GITHUB_ENV
           echo "MINOR=$MINOR" >> $GITHUB_ENV
+          echo "PATCH=$PATCH" >> $GITHUB_ENV
 
       - name: Increment the MINOR version
         id: increment-minor
@@ -41,25 +45,23 @@ jobs:
           echo "New MINOR version: $NEW_MINOR"
           echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
 
-      - name: Update the MINOR version using GitHub CLI
+      - name: Update the version using GitHub CLI
         run: |
+          NEW_VERSION="$MAJOR.$NEW_MINOR.$PATCH"
           gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/MINOR \
-            -f "name=MINOR" -f "value=$NEW_MINOR"
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
+            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
 
       - name: Set outputs for the new version
         id: version
         run: |
-          MAJOR=1 # Assuming a fixed value for MAJOR version
-          NEW_VERSION="$MAJOR.$NEW_MINOR.0"
           VERSION_CODE="$MAJOR"
           echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$VERSION_CODE" >> $GITHUB_OUTPUT
-          echo "minor-version=$NEW_MINOR" >> $GITHUB_OUTPUT
-             
+          echo "minor-version=$NEW_MINOR" >> $GITHUB_OUTPUT     
         
   build:
     runs-on: [self-hosted, Windows]
