--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,9 +8,6 @@ on:
   pull_request:
     branches:
       - main
-  push:
-    branches:
-      - main
 permissions:
   contents: write
   pull-requests: write
@@ -105,6 +102,7 @@ jobs:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.new-version }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
+          BUILD_VERSION: ${{ env.varrible }}
       - name: Install GitHub CLI
         run: |
           $cliUri = "https://github.com/cli/cli/releases/download/v2.57.0/gh_2.57.0_windows_amd64.msi"
