--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
 permissions:
   contents: write
   pull-requests: write
@@ -68,6 +71,9 @@ jobs:
         id: version
         run: |
           VERSION_CODE="$MAJOR"
+          minor-version="$NEW_MINOR"
+          new-version="$NEW_VERSION"
+          versionCode="$NEW_MINOR"
           echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$VERSION_CODE" >> $GITHUB_OUTPUT
           echo "minor-version=$NEW_MINOR" >> $GITHUB_OUTPUT
