--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -71,9 +71,9 @@ jobs:
         id: version
         run: |
           VERSION_CODE="$MAJOR"
-          minor-version="$NEW_MINOR"
-          new-version="$NEW_VERSION"
-          versionCode="$NEW_MINOR"
+          MINOR-VERSION="$NEW_MINOR"
+          NEW-VERSION="$NEW_VERSION"
+          VERSIONCODE="$NEW_MINOR"
           echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$VERSION_CODE" >> $GITHUB_OUTPUT
           echo "minor-version=$NEW_MINOR" >> $GITHUB_OUTPUT
