--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -54,6 +54,7 @@ jobs:
           GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Update the version using GitHub CLI
+        id: version
         run: |
           NEW_VERSION="$MAJOR.$NEW_MINOR.$PATCH"
           echo "Updating version to: $NEW_VERSION"
@@ -99,7 +100,7 @@ jobs:
         run: cmd /c ".\build.bat"
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
-          NEW_VERSION: ${{ needs.prepare-version.outputs.new-version }}
+          NEW_VERSION: ${{ needs.prepare-version.outputs.newVersion }}
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
           BUILD_VERSION: ${{ env.varrible }}
       - name: Install GitHub CLI
@@ -116,8 +117,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
-          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}
-          release_name: ${{ needs.prepare-version.outputs.new-version }}
+          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
+          release_name: ${{ needs.prepare-version.outputs.newVersion }}
           body_path: Technical/release_base.md
           draft: false
           prerelease: false
