--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,17 +1,16 @@
 name: Publish
 
 env:
-  branch-name: 'main'
-  varrible: 'STABIL_VERSION'
-  dev-version: 'DEV_VERSION'
+  branch-name: 'develop'
+  varrible: 'DEV_VERSION'
 
 on:
   pull_request:
     branches:
-      - main
+      - develop
   push:
     branches:
-      - main
+      - develop
 permissions:
   contents: write
   pull-requests: write
@@ -31,7 +30,7 @@ jobs:
           VERSION=$(gh api \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
+            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
             --jq '.value')
           echo "Current version: $VERSION"
           if [[ -z "$VERSION" ]]; then
@@ -48,23 +47,23 @@ jobs:
       - name: Increment the MINOR version
         id: increment-minor
         run: |
-          NEW_MINOR=$((MINOR + 1))
-          echo "New MINOR version: $NEW_MINOR"
-          echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
+          NEW_PATCH=$((PATCH + 1))
+          echo "New MINOR version: $NEW_PATCH"
+          echo "new-minor=$NEW_PATCH" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Update the version using GitHub CLI
         id: version
         run: |
-          NEW_VERSION="$MAJOR.$NEW_MINOR.$PATCH"
+          NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
           echo "Updating version to: $NEW_VERSION"
           echo "newVersion=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$MAJOR" >> $GITHUB_OUTPUT
-          echo "minorVersion=$NEW_MINOR" >> $GITHUB_OUTPUT
+          echo "minorVersion=$MINOR" >> $GITHUB_OUTPUT
           echo newVersion: $NEW_VERSION
           echo versionCode: $MAJOR
-          echo minorVersion: $NEW_MINOR
+          echo minorVersion: $MINOR
           gh api \
             --method PATCH \
             -H "Accept: application/vnd.github+json" \
@@ -72,15 +71,9 @@ jobs:
             /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
             -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
             
-            gh api \
-            --method PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
-            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
-          NEW_MINOR: ${{ env.new-minor }}    
+          NEW_PATCH: ${{ env.new-minor }}    
         
         
   build:
