--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -69,7 +69,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
-            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
+            -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
             
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
