--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -77,7 +77,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/DEV_VERSION \
-            -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
+            -f "name=DEV_VERSION" -f "value=$NEW_VERSION"
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
           NEW_MINOR: ${{ env.new-minor }}    
