--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -120,10 +120,10 @@ jobs:
         with:
           files: output/*.apk,output/*.msix,KoOrderRegister/Technical/kor.pfx
           tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minorVersion }}
-          release_name: ${{ needs.prepare-version.outputs.newVersion }}
+          release_name: ${{ needs.prepare-version.outputs.newVersion }} dev version
           body_path: Technical/release_base.md
           draft: false
-          prerelease: false
+          prerelease: true
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
